--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             <button class="btn-btn">Google Search</button>
             <button class="btn-btn">I'm Feeling Lucky</button>
         </div>
-        <div class="languages">Google offered in: <a
+        <div class="languages">
+            <span>Google offered in:</span>
+            <a
                 href="https://www.google.com/setprefs?sig=0_YAoCoqwQIu2_iwbHtQrUeBRk7QU%3D&amp;hl=ha&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ2ZgBCA4">Hausa</a>
             <a
                 href="https://www.google.com/setprefs?sig=0_YAoCoqwQIu2_iwbHtQrUeBRk7QU%3D&amp;hl=ig&amp;source=homepage&amp;sa=X&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ2ZgBCA8">Igbo</a>
@@ -76,14 +78,14 @@
             Nigeria
         </div>
         <div class="carbon">
-            <a class="pHiOh" href="https://sustainability.google/commitments/?utm_source=googlehpfooter&amp;utm_medium=housepromos&amp;utm_campaign=bottom-footer&amp;utm_content=">
+            <a href="https://sustainability.google/commitments/?utm_source=googlehpfooter&amp;utm_medium=housepromos&amp;utm_campaign=bottom-footer&amp;utm_content=">
                 <img src="images/carbon.png" alt="carbon neutral logo">
                 <span>Carbon neutral since 2007</span>
             </a>
         </div>
         <div class="footer-links">
-            <div class="KxwPGc AghGtd"><a class="pHiOh" href="https://about.google/?utm_source=google-NG&amp;utm_medium=referral&amp;utm_campaign=hp-footer&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://about.google/%3Futm_source%3Dgoogle-NG%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQkNQCCBI">About</a><a class="pHiOh" href="https://www.google.com/intl/en_ng/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://www.google.com/intl/en_ng/ads/%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQkdQCCBM">Advertising</a><a class="pHiOh" href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://www.google.com/services/%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQktQCCBQ">Business</a><a class="pHiOh" href="https://google.com/search/howsearchworks/?fg=1">  How Search works </a></div>
-            <div class="KxwPGc iTjxkf"><a class="pHiOh" href="https://policies.google.com/privacy?hl=en-NG&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://policies.google.com/privacy%3Fhl%3Den-NG%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ8awCCBU">Privacy</a><a class="pHiOh" href="https://policies.google.com/terms?hl=en-NG&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://policies.google.com/terms%3Fhl%3Den-NG%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ8qwCCBY">Terms</a>
+            <div><a href="https://about.google/?utm_source=google-NG&amp;utm_medium=referral&amp;utm_campaign=hp-footer&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://about.google/%3Futm_source%3Dgoogle-NG%26utm_medium%3Dreferral%26utm_campaign%3Dhp-footer%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQkNQCCBI">About</a><a href="https://www.google.com/intl/en_ng/ads/?subid=ww-ww-et-g-awa-a-g_hpafoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpafooter&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://www.google.com/intl/en_ng/ads/%3Fsubid%3Dww-ww-et-g-awa-a-g_hpafoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpafooter%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQkdQCCBM">Advertising</a><a href="https://www.google.com/services/?subid=ww-ww-et-g-awa-a-g_hpbfoot1_1!o2&amp;utm_source=google.com&amp;utm_medium=referral&amp;utm_campaign=google_hpbfooter&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://www.google.com/services/%3Fsubid%3Dww-ww-et-g-awa-a-g_hpbfoot1_1!o2%26utm_source%3Dgoogle.com%26utm_medium%3Dreferral%26utm_campaign%3Dgoogle_hpbfooter%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQktQCCBQ">Business</a><a href="https://google.com/search/howsearchworks/?fg=1">  How Search works </a></div>
+            <div><a href="https://policies.google.com/privacy?hl=en-NG&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://policies.google.com/privacy%3Fhl%3Den-NG%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ8awCCBU">Privacy</a><a href="https://policies.google.com/terms?hl=en-NG&amp;fg=1" ping="/url?sa=t&amp;rct=j&amp;source=webhp&amp;url=https://policies.google.com/terms%3Fhl%3Den-NG%26fg%3D1&amp;ved=0ahUKEwiwvqqUovTvAhVLhRoKHfYADrIQ8qwCCBY">Terms</a>
             <button>Settings</button>
         </div>
     </footer>
