--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                 <input type="search" name="search" id="search">
 
-                <svg class="HPVvwb" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <svg class="voice" focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z"
                         fill="#4285f4"></path>
